--- a/01-ec2.md
+++ b/01-ec2.md
@@ -1,6 +1,6 @@
 # EC2 인스턴스 관리
 
-## ✅ 인스턴스 타입 변경
+## 인스턴스 타입 변경
 
 - EC2 인스턴스의 타입을 변경하려면 반드시 중지(stop) 후 변경 가능
 - 변경 예시: `t3.large` → `c5.large` (컴퓨트 최적화)
@@ -9,7 +9,7 @@
   2. 인스턴스 유형 변경
   3. 인스턴스 시작
 
-## ✅ 성능 최적화 전략
+## 성능 최적화 전략
 
 - CPU 사용률이 높은 워크로드에는 컴퓨트 최적화 인스턴스(C 시리즈)가 적합
 - T 시리즈는 버스트 성능 기반 – 일정한 고성능 요구에는 부적합
@@ -18,7 +18,7 @@
 
 # EC2インスタンス管理
 
-## ✅ インスタンスタイプの変更
+## インスタンスタイプの変更
 
 - EC2インスタンスのタイプを変更するには、インスタンスを **停止(stop)** する必要があります。
 - 例: `t3.large` → `c5.large`（コンピュート最適化タイプ）
@@ -27,7 +27,7 @@
   2. インスタンスタイプを変更
   3. インスタンスを起動（start）
 
-## ✅ パフォーマンス最適化のポイント
+## パフォーマンス最適化のポイント
 
 - 高いCPU使用率のワークロードには、コンピュート最適化タイプ（Cファミリー）が最適
 - Tファミリー（バースト可能インスタンス）は一定の高性能処理には向いていません
