--- a/02-s3.md
+++ b/02-s3.md
@@ -1,6 +1,6 @@
 # Amazon S3 전송 최적화
 
-## ✅ S3 Transfer Acceleration
+## S3 Transfer Acceleration
 
 - 사용자가 지리적으로 멀리 떨어져 있는 경우, S3 업로드가 느려질 수 있음
 - Transfer Acceleration 사용 시 CloudFront 엣지를 통해 데이터가 AWS 내부 네트워크로 전달됨
@@ -20,7 +20,7 @@
 
 # Amazon S3 転送最適化
 
-## ✅ S3 Transfer Acceleration
+## S3 Transfer Acceleration
 
 - 地理的に遠い場所からS3にアップロードすると、速度が遅くなる場合があります。
 - Transfer Accelerationを使用すると、CloudFrontエッジロケーション経由でAWS内部ネットワークにデータが転送され、アップロードが高速化されます。
