--- a/02-s3.md
+++ b/02-s3.md
@@ -11,7 +11,7 @@
 - 전용 엔드포인트 사용:
   - `https://<bucket-name>.s3-accelerate.amazonaws.com`
 
-## ❌ 대안이 아닌 방법들
+## NG
 
 - Access Point: 접근 제어용
 - NLB + S3: 비효율적이며 지원되지 않음
@@ -31,7 +31,7 @@
 - 専用エンドポイント例：
   - `https://<bucket-name>.s3-accelerate.amazonaws.com`
 
-## ❌ 他の非推奨な方法
+## NG方法
 
 - Access Point：アクセス制御用で速度最適化とは無関係
 - NLB + S3：非効率かつサポートされていません
