--- a/02-s3.md
+++ b/02-s3.md
@@ -11,7 +11,7 @@
 - 전용 엔드포인트 사용:
   - `https://<bucket-name>.s3-accelerate.amazonaws.com`
 
-## NG
+### NG
 
 - Access Point: 접근 제어용
 - NLB + S3: 비효율적이며 지원되지 않음
@@ -22,8 +22,8 @@
 
 ## S3 Transfer Acceleration
 
-- 地理的に遠い場所からS3にアップロードすると、速度が遅くなる場合があります。
-- Transfer Accelerationを使用すると、CloudFrontエッジロケーション経由でAWS内部ネットワークにデータが転送され、アップロードが高速化されます。
+- 地理的に遠い場所からS3にアップロードすると、速度が遅くなる場合がある。
+- Transfer Accelerationを使用すると、CloudFrontエッジロケーション経由でAWS内部ネットワークにデータが転送され、アップロードが高速化
 
 ### 構成方法
 
@@ -31,7 +31,7 @@
 - 専用エンドポイント例：
   - `https://<bucket-name>.s3-accelerate.amazonaws.com`
 
-## NG方法
+### NG
 
 - Access Point：アクセス制御用で速度最適化とは無関係
-- NLB + S3：非効率かつサポートされていません
+- NLB + S3：非効率かつサポートされない
