--- a/01-ec2.md
+++ b/01-ec2.md
@@ -2,7 +2,7 @@
 
 ## 인스턴스 타입 변경
 
-- EC2 인스턴스의 타입을 변경하려면 반드시 중지(stop) 후 변경 가능
+- EC2 인스턴스의 타입을 변경하려면 반드시 중지 후 변경 가능
 - 변경 예시: `t3.large` → `c5.large` (컴퓨트 최적화)
 - 변경 절차:
   1. 인스턴스 중지
@@ -20,7 +20,7 @@
 
 ## インスタンスタイプの変更
 
-- EC2インスタンスのタイプを変更するには、インスタンスを **停止(stop)** する必要があります。
+- EC2インスタンスのタイプを変更するには、インスタンスを停止する必要がある。
 - 例: `t3.large` → `c5.large`（コンピュート最適化タイプ）
 - 手順:
   1. インスタンスを停止
